--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ export(get_legal_entity_info)
 export(get_liegenschaften_layer)
 export(get_new_pub_url)
 export(total_entries_check)
+export(try_later_if_fail)
 export(xml_to_df)
