update cli-messages/errors(...) and implement map-test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     tidyr,
     tidyselect,
     xml2,
-    stringr
+    stringr,
+    cli
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
