update package name

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: baupub
-Title: BauPub
+Package: SpiessR
+Title: SpiessR
 Version: 0.1.0
 Authors@R: 
     person("Christoph", "Zust", , "datashop@statistik.zh.ch", role = c("aut", "cre"),
