--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: SpiessR
-Title: SpiessR
+Package: Nachbr
+Title: Nachbr
 Version: 0.1.0
 Authors@R: 
     person("Christoph", "Zust", , "datashop@statistik.zh.ch", role = c("aut", "cre"),
