adjust description, special characters and docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,9 @@ Imports:
     dplyr,
     httr2,
     leaflet,
+    leaflet.extras,
+    htmltools,
+    htmlwidgets,
     purrr,
     rlang,
     sf,
